# Open-Arignan

./: .gitignore  FEATURE_STATUS.md  LICENSE  README.md  REPOSITORY_MAP.md  pyproject.toml  setup.py
.githooks/: pre-push
.github/workflows/: package.yml  tests.yml
packaging/pyinstaller/: arignan.spec  arignan_entry.py
packaging/standalone/: README_STANDALONE.md
src/arignan/: __init__.py  application.py  cli.py  compute.py  config.py  mcp_config.py  model_registry.py  paths.py  prompts.py  runtime_env.py  setup_flow.py  tracing.py
src/open_arignan.egg-info/: tmpqjh86l79
tests/: __init__.py  conftest.py
tests/fixtures/: pdf_fixture.py
tests/integration/: test_chunking_pipeline.py  test_cli_smoke.py  test_dense_index.py  test_end_to_end_flow.py  test_grouping_pipeline.py  test_gui_server.py  test_ingestion_service.py  test_lexical_pipeline.py  test_markdown_repository.py  test_mcp_gui_parallel.py  test_mcp_http.py  test_mcp_server.py  test_mcp_stdio.py  test_pdf_fixture_parsing.py  test_reranking_pipeline.py  test_retrieval_pipeline.py  test_session_persistence.py  test_storage_layout.py
tests/unit/: test_application_output.py  test_attack_stress.py  test_chunking.py  test_cli_exception_logging.py  test_cli_help.py  test_config.py  test_dense_qdrant_compat.py  test_embedding.py  test_grouping_planner.py  test_ingestion_discovery.py  test_ingestion_log.py  test_ingestion_parsers.py  test_lexical_index.py  test_llm_runtime.py  test_markdown_writer.py  test_mcp_config.py  test_mcp_server_keepalive.py  test_models.py  test_ollama_service.py  test_paths.py  test_prompts.py  test_reranking.py  test_retrieval_pipeline.py  test_security_batch_escape.py  test_security_chunk_id.py  test_security_dense_locking.py  test_security_exception_context.py  test_security_gui.py  test_security_hat_query.py  test_security_markdown_injection.py  test_security_ollama_model_name.py  test_security_prompt_injection.py  test_security_ssrf.py  (+7 more)
(+49 files in other folders)
