[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-arignan"
version = "0.1.0"
description = "Local-first private knowledge base and retrieval system."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC BY-NC-SA 4.0" }
authors = [
  { name = "Open Arignan Contributors" }
]
dependencies = [
  "httpx>=0.27,<1",
  "pypdf>=4.2,<6",
  "huggingface_hub>=0.23,<1",
  "qdrant-client>=1.9,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[project.scripts]
arignan = "arignan.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
