[build-system]
requires = ["setuptools>=69", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "open-arignan"
version = "1.0.0"
description = "Local-first private knowledge base and retrieval system."
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-NC-SA-4.0"
authors = [
  { name = "Rishi Nandha Vanchinathan" }
]
dependencies = [
  "httpx>=0.27,<1",
  "fastapi>=0.115,<1",
  "pypdf>=4.2,<6",
  "pillow>=10,<12",
  "python-multipart>=0.0.9,<1",
  "pypdfium2>=4.30,<5",
  "rapidocr-onnxruntime>=1.4,<2",
  "huggingface_hub>=0.23,<1",
  "qdrant-client>=1.9,<2",
  "transformers>=4.48,<5",
  "accelerate>=0.30,<1",
  "sentence-transformers>=3.0,<4",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[project.scripts]
arignan = "arignan.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
